{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 44,
  "lineage": "e7954b32-7729-5d3d-f542-165e2a4427a2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/networkSecurityGroups/linux-NSG",
            "location": "westeurope",
            "name": "linux-NSG",
            "resource_group_name": "azure-tf-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_SSH_for_everyone",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/networkSecurityGroups/windows-NSG",
            "location": "westeurope",
            "name": "windows-NSG",
            "resource_group_name": "azure-tf-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_RDP_for_everyone",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "linux_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/Linux_Subnet",
            "name": "Linux_Subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-tf-demo",
            "virtual_network_name": "demo-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "windows_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/Windows_Subnet",
            "name": "Windows_Subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-tf-demo",
            "virtual_network_name": "demo-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/Linux_Subnet",
            "network_security_group_id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/networkSecurityGroups/linux-NSG",
            "subnet_id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/Linux_Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.linux",
            "azurerm_subnet.linux_subnet",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/Windows_Subnet",
            "network_security_group_id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/networkSecurityGroups/windows-NSG",
            "subnet_id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/Windows_Subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.windows",
            "azurerm_subnet.windows_subnet",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "666352ca-413f-4af7-81ce-e75ca1de74c6",
            "id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/virtualNetworks/demo-vnet",
            "location": "westeurope",
            "name": "demo-vnet",
            "resource_group_name": "azure-tf-demo",
            "subnet": [
              {
                "address_prefix": "10.0.4.0/24",
                "id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/Linux_Subnet",
                "name": "Linux_Subnet",
                "security_group": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/networkSecurityGroups/linux-NSG"
              },
              {
                "address_prefix": "10.0.5.0/24",
                "id": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/Windows_Subnet",
                "name": "Windows_Subnet",
                "security_group": "/subscriptions/088f80d3-e6bc-4be5-bdd8-6f82834eff40/resourceGroups/azure-tf-demo/providers/Microsoft.Network/networkSecurityGroups/windows-NSG"
              }
            ]
          }
        }
      ]
    }
  ]
}